tests/invalid/Parsing_Invalid_4.whiley
type rec is {
  int field,
  int field
}